# memoryShare

./: .gitignore  INSTALL_FOR_COLLEAGUES.md  LICENSE  MANIFEST.in  PUBLISHING.md  PUSH_TO_GITHUB.md  README.md  USER_GUIDE.md  publish.sh  pyproject.toml  requirements.txt  verify_package.py
src/memory_share/: __init__.py  cli.py  compaction.py  consistency.py  git_hooks.py  models.py  scanner.py  server.py  storage.py  sync.py
templates/: claude_md.md  copilot_instructions.md  cursor_rules.mdc  post-commit.sh
